--- a/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-34-00.tex
+++ b/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-34-00.tex
@@ -5,5 +5,5 @@
 \label{fig:AD-34-00}
 \end{figure}
 
-Descripcion escenario...
+Este escenario permite a los usuarios visualizar la información de un empleado. Con el botón \textbf{AD-34-01} se puede cerrar la ventana, volviendo al escenario \textbf{AD-32-00}. En \textbf{AD-34-02} se muestra la información del empleado: Rol, ubicación en la que trabaja, nombres, apellidos, nombre de usuario, correo electrónico, tipo de documento, documento, fecha de nacimiento, fecha de inicio de actividad laboral, estado civil, cantidad de hijos y número de teléfono.
 \clearpage
