--- a/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-40-00.tex
+++ b/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-40-00.tex
@@ -5,5 +5,5 @@
 \label{fig:AD-40-00}
 \end{figure}
 
-Descripcion escenario...
+Este escenario permite crear o modificar una tela, en \textbf{AD-40-01} se indicará la operación que se esté realizando mostrando 'Crear Telas' o 'Modificar Telas'. Con el botón \textbf{AD-40-02} se podrá volver al escenario \textbf{AD-39-00}. Se debe ingresar el nombre de la tela en \textbf{AD-40-03} y el precio en \textbf{AD-40-04}. En caso de estar modificando un producto, los campos \textbf{AD-40-03} y \textbf{AD-40-04} estarán autocompletados con los valores actuales de la tela, pudiendo modificar los mismos. Al hacer click en el botón \textbf{AD-40-05} se modificará o creará la tela según corresponda, mostrando en el botón el texto 'Crear' o 'Modificar' respectivamente. Con el botón \textbf{AD-40-06} se podrá volver al escenario \textbf{AD-39-00} cancelando la operación que se esté realizando.
 \clearpage
