--- a/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-41-00.tex
+++ b/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-41-00.tex
@@ -5,5 +5,5 @@
 \label{fig:AD-41-00}
 \end{figure}
 
-Descripcion escenario...
+Este escenario permite a un usuario ver el historial de precios de una tela en una gráfica. En \textbf{AD-41-01} se puede visualizar el nombre de la tela a la cual se le está viendo los precios. El botón \textbf{AD-41-02} permite cerrar la ventana, volviendo al escenario \textbf{AD-39-00}. En \textbf{AD-41-03} se puede visualizar una gráfica con el precio que tuvo la tela a lo largo del tiempo.
 \clearpage
