--- a/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-44-00.tex
+++ b/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-44-00.tex
@@ -5,5 +5,5 @@
 \label{fig:AD-44-00}
 \end{figure}
 
-Descripcion escenario...
+Este escenario permite a un usuario ver el historial de precios de un producto en una gráfica. En \textbf{AD-44-01} se puede visualizar el nombre del producto al cual se le está viendo los precios. El botón \textbf{AD-44-02} permite cerrar la ventana, volviendo al escenario \textbf{AD-42-00}. En \textbf{AD-44-03} se puede visualizar una gráfica con el precio que tuvo el producto a lo largo del tiempo.
 \clearpage
