--- a/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-51-00.tex
+++ b/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-51-00.tex
@@ -5,5 +5,5 @@
 \label{fig:AD-51-00}
 \end{figure}
 
-Descripcion escenario...
+Este escenario permite a un usuario cambiar su propia contraseña, con el botón \textbf{AD-51-01} se podrá cerrar la ventana y volver al escenario \textbf{AD-02-00}. El usuario debe ingresar la contraseña actual en el campo \textbf{AD-51-02} y la nueva contraseña en el campo AD-51-04. Si el usuario hace click en el botón \textbf{AD-51-03} podrá visualizar la contraseña que está ingresando. Si el usuario hace click en el botón \textbf{AD-51-05} modificará la contraseña de acuerdo a los campos ingresados y si hace click en el botón \textbf{AD-51-06} cancelará, cerrando la ventana y volviendo al escenario \textbf{AD-02-00}.
 \clearpage
