--- a/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-50-00.tex
+++ b/Informe Final/Capitulos/Capitulo4/DescripcionesEscenarios/AD-50-00.tex
@@ -5,5 +5,6 @@
 \label{fig:AD-50-00}
 \end{figure}
 
-Descripcion escenario...
+Este escenario permite a un usuario visualizar un mueble y consultar el stock de un mueble en una determinada ubicación, con el botón \textbf{AD-50-01} se podrá cerrar la ventana y volver al escenario \textbf{AD-48-00}. 
+Al hacer click en el campo \textbf{AD-50-03} se desplegará un menú con opciones de las distintas ubicaciones existentes en el sistema. Al seleccionar una de las opciones se podrá visualizar en \textbf{AD-50-04} la cantidad total en stock disponible para dicha ubicación.
 \clearpage
