--- a/Informe Final/Capitulo1.tex
+++ b/Informe Final/Capitulo1.tex
@@ -3,25 +3,14 @@
 \markboth{CAPÍTULO \ref*{ch:capitulo1}. Introducción}{CAPÍTULO \ref*{ch:capitulo1}. Introducción}
 \section{Introducción}
 \paragraph\indent
-%El proyecto consiste en realizar el módulo de interfaz gráfica del sistema SCADA desarrollado por DIGICOM.
-\paragraph\indent
-%El proyecto fue solicitado y financiado por DIGICOM. Actualmente DIGICOM se encuentra en un proceso de modernización de su sistema SCADA el cual está limitado por diferentes características propias de la tecnología disponible en el momento de su desarrollo.
-\paragraph\indent
-%El sistema SCADA actualmente en funcionamiento fue desarrollado para satisfacer requisitos que a lo largo de los años fueron cambiando.
-\paragraph\indent
-%El nuevo módulo de interfaz gráfica brindará a los usuarios la capacidad de trabajar con las nuevas características del sistema SCADA, facilitando en gran medida la interacción entre los usuarios y el sistema.
-
+Esta especificación tiene como objetivo analizar y documentar las necesidades funcionales que deberán ser soportadas por el sistema a desarrollar en forma clara, precisa, completa y verificable. Para ello, se identificarán los requisitos que ha de satisfacer el nuevo sistema mediante entrevistas, recolección de datos, el estudio de los problemas de las unidades afectadas y sus necesidades actuales. Además de identificar los requisitos se deberán establecer prioridades, lo cual proporciona un punto de referencia para validar el sistema final que compruebe que se ajusta a las necesidades del usuario. Esta documentación surgió a partir de sucesivas versiones del mismo que fueron revisadas por los usuarios finales del sistema, los tutores y jurados del proyecto.
 \section{Objetivos}
-
 \subsection{Generales}
 \paragraph\indent
-\begin{itemize}
-	\item Objetivos generales aquí
-\end{itemize}
-
+Con respecto al trabajo de graduación, el objetivo principal poner en práctica todos los conocimientos y habilidades adquiridas durante el transcurso de la carrera, mediante la construcción de un producto de software que satisfaga las necesidades y genere valor agregado a un cliente determinado.
 
 \subsection{Específicos}
 \begin{itemize}
+	\item Diseñar un sistema intuitivo, fácil de utilizar y que pueda ser implementado rápidamente.
 	\item Diseñar el sistema de manera que se puedan añadir nuevas funcionalidades al mismo, teniendo en cuenta el constante avance de la tecnología.
-	%\item Diseñar vistas cuyas principales funcionalidades puedan ser ejecutadas de manera intuitiva y que al mismo tiempo mantengan un estilo similar a las del sistema que se encuentra actualmente en funcionamiento, haciendo que la capacitación de los usuarios para usar el nuevo sistema sea mucho más sencilla.
 \end{itemize}
